# VictorForever

./: README.md  pyproject.toml  setup.py
victorforever/: __init__.py
victorforever.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
